	- Fixed a bug where parameter entities weren't being expanded inside
	  entity literals.
	- Defined XML_SetEndNamespaceDeclHandler. Thanks to Darryl Miles for
	  finding this oversight.
	- Changed default patterns in lib/Makefile.in to fit non-GNU makes
	  Thanks to robin@unrated.net for reporting and providing an
	  account to test on.
	- The reference had the wrong label for XML_SetStartNamespaceDecl.
	  Reported by an anonymous user.
Release 1.95.0 Fri Sep 29 2000
	- XML_ParserCreate_MM
		Allows you to set a memory management suite to replace the
		standard malloc,realloc, and free.
	- XML_SetReturnNSTriplet
		If you turn this feature on when namespace processing is in
		effect, then qualified, prefixed element and attribute names
		are returned as "uri|name|prefix" where '|' is whatever
		separator character is used in namespace processing.
	- Merged in features from perl-expat
		o XML_SetElementDeclHandler
		o XML_SetAttlistDeclHandler
		o XML_SetXmlDeclHandler
		o XML_SetEntityDeclHandler
		o StartDoctypeDeclHandler takes 3 additional parameters:
			sysid, pubid, has_internal_subset
		o Many paired handler setters (like XML_SetElementHandler)
		  now have corresponding individual handler setters
		o XML_GetInputContext for getting the input context of
		  the current parse position.
	- Added reference material
	- Packaged into a distribution that builds a sharable library